--- a/app/src/main/res/layout/fragment_daily_image.xml
+++ b/app/src/main/res/layout/fragment_daily_image.xml
@@ -49,4 +49,22 @@
 
     <include layout="@layout/bottom_sheet_layout" />
 
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:backgroundTint="?colorPrimary"
+        app:fabAlignmentMode="center"
+        app:navigationIcon="@drawable/ic_hamburger" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="?colorAccent"
+        app:layout_anchor="@id/bottom_app_bar"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="#FFFFFF" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
