--- a/app/src/main/res/layout/fragment_universe.xml
+++ b/app/src/main/res/layout/fragment_universe.xml
@@ -1,11 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout_universe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIconTint="@color/universe_tab_layout_icon_tint"
+        app:tabIndicatorColor="@android:color/holo_orange_dark"
+        app:tabInlineLabel="true"
+        app:tabSelectedTextColor="@color/teal_200"
+        app:tabTextColor="@color/blue" />
+
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager_universe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout_universe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
