show bottom navigation

--- a/app/src/main/res/layout/fragment_universe.xml
+++ b/app/src/main/res/layout/fragment_universe.xml
@@ -4,27 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout_universe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tabIconTint="@color/universe_tab_layout_icon_tint"
-        app:tabIndicatorColor="@android:color/holo_orange_dark"
-        app:tabInlineLabel="true"
-        app:tabSelectedTextColor="@color/teal_200"
-        app:tabTextColor="@color/blue" />
-
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager_universe"
+    <FrameLayout
+        android:id="@+id/view_fragment_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/navigation_view_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout_universe" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation_view_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_fragment_container"
+        app:menu="@menu/main_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
