--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,8 @@
         <item name="android:letterSpacing">0.4</item>
     </style>
 
+    <style name="CollapsingToolbarTextAppearance" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
