--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,8 @@
     <dimen name="font_size_small">12sp</dimen>
     <dimen name="font_size_medium">14sp</dimen>
     <dimen name="font_size_large">16sp</dimen>
+    <dimen name="font_size_xlarge">18sp</dimen>
+    <dimen name="font_size_xxlarge">20sp</dimen>
 
     <dimen name="motion_layout_text_input_layout_width">150dp</dimen>
     <dimen name="motion_layout_text_input_layout_start_margin">16dp</dimen>
