--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,13 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="StartingTheme" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@android:color/holo_red_dark</item>
+
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_animated_sun</item>
+        <item name="windowSplashScreenAnimationDuration">5000</item>
+
+        <item name="postSplashScreenTheme">@style/Theme.MDFirst</item>
+    </style>
+
 </resources>
