--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,9 @@
         <item name="android:textViewStyle">@style/MDSecondTextViewStyle</item>
 
         <item name="textColorConnected">@android:color/holo_blue_bright</item>
+
+        <!-- since API 26 -->
+        <item name="android:windowSplashscreenContent">@drawable/splash_background_old</item>
     </style>
 
     <style name="Theme.MDSecond" parent="AppTheme">
@@ -42,6 +45,6 @@
     </style>
 
     <style name="Theme.MDFirst.OldSplash">
-        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:windowBackground">@drawable/splash_background_old</item>
     </style>
 </resources>
